[package]
name = "sparse_table"
version = "0.1.1"
edition = "2021"
description = "SparseTable Struct / ST表数据结构"
license = "MIT"
homepage = "https://github.com/DawnMagnet/SparseTable"
repository = "https://github.com/DawnMagnet/SparseTable"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
